fixed alignment and font issues

--- a/vtr-ui/src/app/components/pages/page-security-wifi/children/wifi-security/wifi-security.component.scss
+++ b/vtr-ui/src/app/components/pages/page-security-wifi/children/wifi-security/wifi-security.component.scss
@@ -5,7 +5,13 @@
 		box-shadow: $drop_shadow;
 		border-radius: $border_radius;
 		background-color: $light;
-		padding: 1.5rem;
+		padding: $fontsize_xl4;
+		@media #{$breakpoint_sm} {
+			padding: $fontsize_xl;
+		}
+		@media #{$breakpoint_lg} {
+			margin-bottom: 3rem;
+		}
 		.loading {
 			text-align: center;
 		}
@@ -206,107 +212,115 @@
 	.col-check-use-state{
 		margin: auto;
 	}
-
-	.content {
-		padding: 1.5rem;
-
-		.cardTitle {
-			display: flex;
-			margin-bottom: 3rem;
-
-			h3 {
-				font-size: 3rem;
-				font-weight: 350;
+	.card-body {
+		@media #{$breakpoint_sm} {
+			padding: 1rem
+		}
+		.content {
+			padding: 1.5rem;
+			@media #{$breakpoint_sm} {
+				padding: 0;
 			}
 
-			.status {
-				font-size: 2rem;
-				margin-left: 3rem;
-				margin-top: 0.8rem;
+			.cardTitle {
+				display: flex;
+				margin-bottom: 3rem;
 
-				.active {
+				h3 {
+					font-size: 3rem;
+					font-weight: 350;
+				}
+
+				.status {
+					font-size: 2rem;
+					margin-left: 3rem;
+					margin-top: 0.8rem;
+
+					.active {
+						text-decoration: underline;
+					}
+				}
+			}
+
+			.cardBody {
+				border: 0.1rem solid $shade_lighter;
+				border-radius: $border_radius;
+				background: $light;
+
+				.status-icon {
+					position: relative;
+					width: 5.5rem;
+
+					fa-icon {
+						color: $main;
+					}
+
+					.circle {
+						background-color: $go;
+						background-image: linear-gradient(313deg, $go_light 25%, $go 100%);
+						height: 2rem;
+						width: 2rem;
+						border-radius: 2rem;
+						border: 0.1rem solid $go_dark;
+						line-height: 0.9rem;
+						display: inline-block;
+						position: absolute;
+						top: 1.9rem;
+						left: 2.1rem;
+
+						fa-icon {
+							font-size: 1.5rem;
+							color: $shade_extralight;
+							position: absolute;
+							left: 0.2rem;
+							top: 0.2rem;
+						}
+
+						&.red {
+							background-color: $stop;
+							background-image: linear-gradient(315deg, $stop_light 25%, $stop 100%);
+							border: 0.1rem solid $stop_dark;
+							fa-icon {
+								left: 0.4rem;
+								top: 0.2rem;
+							}
+						}
+					}
+				}
+
+				.connection-name {
+					overflow: hidden;
+					text-overflow: ellipsis;
+
+					h5 {
+						font-size: 1.6rem;
+						font-weight: $weight_bold;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+					}
+
+					.connection-status {
+						font-size: 1.6rem;
+					}
+					small {
+						font-weight: $weight_light;
+						display: block;
+					}
+				}
+			}
+
+			.card-foot {
+				margin-top: 2.2rem;
+
+				.show-more {
+					font-size: 1.6rem;
 					text-decoration: underline;
 				}
 			}
 		}
-
-		.cardBody {
-			border: 0.1rem solid $shade_lighter;
-			border-radius: $border_radius;
-			background: $light;
-
-			.status-icon {
-				position: relative;
-				width: 5.5rem;
-
-				fa-icon {
-					color: $main;
-				}
-
-				.circle {
-					background-color: $go;
-					background-image: linear-gradient(313deg, $go_light 25%, $go 100%);
-					height: 2rem;
-					width: 2rem;
-					border-radius: 2rem;
-					border: 0.1rem solid $go_dark;
-					line-height: 0.9rem;
-					display: inline-block;
-					position: absolute;
-					top: 1.9rem;
-					left: 2.1rem;
-
-					fa-icon {
-						font-size: 1.5rem;
-						color: $shade_extralight;
-						position: absolute;
-						left: 0.2rem;
-						top: 0.2rem;
-					}
-
-					&.red {
-						background-color: $stop;
-						background-image: linear-gradient(315deg, $stop_light 25%, $stop 100%);
-						border: 0.1rem solid $stop_dark;
-						fa-icon {
-							left: 0.4rem;
-							top: 0.2rem;
-						}
-					}
-				}
-			}
-
-			.connection-name {
-				overflow: hidden;
-				text-overflow: ellipsis;
-
-				h5 {
-					font-size: 1.6rem;
-					font-weight: $weight_bold;
-					overflow: hidden;
-					text-overflow: ellipsis;
-					white-space: nowrap;
-				}
-
-				.connection-status {
-					font-size: 1.6rem;
-				}
-				small {
-					font-weight: $weight_light;
-					display: block;
-				}
-			}
-		}
-
-		.card-foot {
-			margin-top: 2.2rem;
-
-			.show-more {
-				font-size: 1.6rem;
-				text-decoration: underline;
-			}
-		}
 	}
+
 
 	.wifiSecurity {
 		.card {
@@ -350,6 +364,9 @@
 			background: $shade_extralight;
 			border: 0rem;
 			border-radius: $border_radius;
+			@media #{$breakpoint_sm} {
+				padding: 1rem;
+			}
 
 			.collapse-control {
 				margin-top: -0.4rem;
